--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>my CodeWars</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="./pages/index.css">
     </head>
     <body class="root">
         <header class="header">
