--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,7 @@
     </head>
     <body class="root">
         <header class="header">
+            <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
             <h1 class="header__name">my CodeWars</h1>
             <p class="header__kata-count"></p>
         </header>
