--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <footer class="footer">
             <button class="footer__show-more-button">показать ещё</button>
-            <p class="footer__copyright">&copy; 2021 MARAT KARIMOV</p>
+            <p class="footer__copyright">&copy; 2021 KARIMOV</p>
         </footer>
         <template class="element_template">
             <article class="elements elements_hidden">
