--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>my CodeWars</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
         <link rel="stylesheet" href="./pages/index.css">
     </head>
     <body class="root">
